include/dss_capi.h

    DSS_CAPI_DLL void DSSElement_Get_AllPropertyNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL char* DSSElement_Get_Name(void);
    DSS_CAPI_DLL int32_t DSSElement_Get_NumProperties(void);